# worket

./: .gitignore  alembic.ini  app.py  pyproject.toml
api/: api.py
companies/: api.py  marshallers.py  models.py  repositories.py
config/: db.py  logging.py  uuid.py  worket.yaml.template  yaml.py
employees/: api.py  models.py
migrations/versions/: 55f54d74bdcf_create_companies_table.py
tests/integration/companies/: test_repositories.py
tests/unit/companies/: test_marshallers.py
tests/util/: alembic.py  testcontainer.py
