[tool.poetry]
name = "worket"
version = "0.1.0"
description = "A working entries tracker"
authors = ["kaleidos.net"]
license = "APACHE-2.0"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-restful = "^0.3.7"
structlog = "^19.1"
flask-cors = "^3.0"
flake8 = "^3.7"
Click = "^7.0"
pyyaml = "^5.1"
alembic = "^1.1"
pg8000 = "^1.13"

[tool.poetry.dev-dependencies]
flask = "^1.1"
rope = "^0.14.0"
testcontainers = "^2.5"
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
